# zero2prod

./: Cargo.toml  Dockerfile
scripts/: db_init.sh  test.sh
src/: main.rs  startup.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
