[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[registries.crates-io]
protocol = "sparse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2pro"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.6", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"
serde-aux = "4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1"
